tests/negative/typecheck/error.orng
fn main() -> Int {Int ! Char}